--- a/Food Ordering System/appsettings.json
+++ b/Food Ordering System/appsettings.json
@@ -26,5 +26,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-65PN3LU\\SQLEXPRESS; Database=OnlineFoodOrderingAPIDataBase;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+
+  "JwtSettings": {
+    "Issuer": "Food_Ordering_System",
+    "Audience": "Food_Ordering_SystemClient",
+    "DurationInDays": 1,
+    "Key": "MySuperSecretKeys@4607"
+
   }
 }
